--- a/templates/member/mypage-accountinfo.html
+++ b/templates/member/mypage-accountinfo.html
@@ -20,11 +20,6 @@
     <script async="" src="//static.airbridge.io/sdk/latest/airbridge.min.js"></script>
     <style>
         @font-face {
-            font-family: Retro;
-            src: url("/publishing/static/member/fonts/establish\ Retrosans.ttf");
-        }
-
-        @font-face {
             font-family: Jumpit;
             src: url("/static/fonts/member/ff840cfebfb63b0c-s.p.woff2");
         }
@@ -162,7 +157,7 @@
             <div class="main-wrapper0">
                 <div class="main-content1">
                     <div>
-                        <h2><a href="/publishing/templates/member/mypage-main.html" style="font-family: Retro;">마이템프</a>
+                        <h2><a href="/publishing/templates/member/mypage-main.html">마이템프</a>
                         </h2>
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
@@ -194,7 +189,7 @@
                 <div class="main-content2">
                     <ul class="applied-list0">
                         <h1>
-                            <div style="font-family: Retro;">
+                            <div>
                                 계정 정보 수정</div>
                         </h1>
                         <div class="applied-list-blank">
