--- a/templates/member/mypage-applied.html
+++ b/templates/member/mypage-applied.html
@@ -16,37 +16,6 @@
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg">
-    <link rel="stylesheet" href="/_next/static/css/cad931bac97f5ecb.css" data-precedence="next">
-    <link rel="preload" as="script" fetchpriority="low" href="/_next/static/chunks/webpack-e00980e9ec739c33.js">
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-K2J5HLX"></script>
-    <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-    <script src="/_next/static/chunks/fd9d1056-1403efed8a5d9a56.js" async=""></script>
-    <script src="/_next/static/chunks/2472-cc8bce19171016d7.js" async=""></script>
-    <script src="/_next/static/chunks/main-app-85571a0f19fa6cc2.js" async=""></script>
-    <script src="/_next/static/chunks/6394-782c5889429c5852.js" async=""></script>
-    <script src="/_next/static/chunks/6340-869fcd011d2d7429.js" async=""></script>
-    <script src="/_next/static/chunks/app/global-error-65ec73dd6b0ddd7c.js" async=""></script>
-    <script src="/_next/static/chunks/5526-48949280dbc9d3fa.js" async=""></script>
-    <script src="/_next/static/chunks/8285-67151ff55d513e44.js" async=""></script>
-    <script src="/_next/static/chunks/9222-0b87edff29c22664.js" async=""></script>
-    <script src="/_next/static/chunks/3198-d5e30da27a8b69a1.js" async=""></script>
-    <script src="/_next/static/chunks/9903-e4aec8f8082baf1a.js" async=""></script>
-    <script src="/_next/static/chunks/9536-17c5180b41a54dae.js" async=""></script>
-    <script src="/_next/static/chunks/5812-2e7efb9d8229a50d.js" async=""></script>
-    <script src="/_next/static/chunks/app/layout-bae7e4122ffb501d.js" async=""></script>
-    <script src="/_next/static/chunks/1396-14d93c165c0c55b0.js" async=""></script>
-    <script src="/_next/static/chunks/1527-600699e62b81c450.js" async=""></script>
-    <script src="/_next/static/chunks/6548-127b7943b33fe3fd.js" async=""></script>
-    <script src="/_next/static/chunks/8528-c1d2ea7caa70441b.js" async=""></script>
-    <script src="/_next/static/chunks/6691-dfc5ace00217b43e.js" async=""></script>
-    <script src="/_next/static/chunks/630-f4c0982151fb6384.js" async=""></script>
-    <script src="/_next/static/chunks/5866-9975f1843c8655f6.js" async=""></script>
-    <script src="/_next/static/chunks/3164-5b5385fe3103e55c.js" async=""></script>
-    <script src="/_next/static/chunks/3807-d3ba823e15f6cab5.js" async=""></script>
-    <script src="/_next/static/chunks/app/page-03b0154981d5674e.js" async=""></script>
-    <script src="/_next/static/chunks/app/error-7b994f86a1197aef.js" async=""></script>
-    <script src="/_next/static/chunks/app/(main)/layout-546fee3e9e2585ae.js" async=""></script>
     <link rel="preload" href="https://dynamic.criteo.com/js/ld/ld.js?a=116898" as="script">
     <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script">
     <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script">
@@ -55,7 +24,7 @@
     <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!">
     <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보">
     <meta name="naver-site-verification" content="b0e5d9e30ab4abe67694a4472741b130e5833906">
-    <link rel="icon" href="/publishing/static/images/member/favicon.ico" />
+    <link rel="icon" href="/static/images/member/favicon.ico" />
     <meta name="next-size-adjust">
     <script src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js" nomodule=""></script>
     <style data-styled="active" data-styled-version="6.0.7">
@@ -187,10 +156,6 @@
                             <ul>
                                 <li><a href="/myjumpit">마이템프</a>
                                 </li>
-                                <li><a href="/applications-status/applied">취업축하금
-                                        신청</a></li>
-                                <li><a href="/account">KDT
-                                        훈련과정 인증</a></li>
                                 <li><button type="button">로그아웃</button>
                                 </li>
                             </ul>
@@ -207,7 +172,7 @@
             <div class="main-wrapper0">
                 <div class="main-content1">
                     <div>
-                        <h2><a href="/publishing/templates/member/mypage-main.html" style="font-family: Retro;">마이템프</a>
+                        <h2><a href="/publishing/templates/member/mypage-main.html">마이템프</a>
                         </h2>
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
@@ -235,42 +200,166 @@
                     </div>
                 </div>
                 <div class="main-content2">
-                    <h1 style="font-family: Retro;">입사지원 현황</h1>
+                    <h1>입사지원 현황</h1>
                     <ul class="topbox0">
-                        <li class="topbox-content1"><a href="/applications-status/writing">
+                        <li class="topbox-content1" id="writing"><a>
                                 <dl>
                                     <dt>고민중</dt>
                                     <dd>1</dd>
                                 </dl>
                             </a></li>
-                        <li class="topbox-content1-1"><a href="/applications-status/applied">
+                        <li class="topbox-content1-1" id="applied"><a>
                                 <dl>
                                     <dt>지원완료</dt>
                                     <dd>0</dd>
                                 </dl>
                             </a></li>
-                        <li class="topbox-content1"><a href="/applications-status/passed">
+                        <li class="topbox-content1" id="passed"><a>
                                 <dl>
                                     <dt>서류통과</dt>
                                     <dd>0</dd>
                                 </dl>
                             </a></li>
-                        <li class="topbox-content1"><a href="/applications-status/hired">
+                        <li class="topbox-content1" id="hired"><a>
                                 <dl>
                                     <dt>최종합격</dt>
                                     <dd>0</dd>
                                 </dl>
                             </a></li>
-                        <li class="topbox-content1"><a href="/applications-status/rejected">
+                        <li class="topbox-content1" id="rejected"><a>
                                 <dl>
                                     <dt>불합격</dt>
                                     <dd>0</dd>
                                 </dl>
                             </a></li>
                     </ul>
-                    <ul class="applied-list0">
+                    <ul class="applied-list0 writing-list hidden">
                         <h1>
-                            <div style="font-family: Retro;">지원완료 총 0건</div>
+                            <div>고민중 총 0건</div>
+                            <div>
+                                <div class="applied-list0-filter">
+                                    <button aria-expanded="false" aria-haspopup="true" class="btn-text"
+                                        type="button"><span>열람여부
+                                            필터링</span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="none" viewBox="0 0 16 16" aria-hidden="true" class="arrow grey">
+                                            <path fill="#222" fill-rule="evenodd"
+                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                                clip-rule="evenodd">
+                                            </path>
+                                        </svg></button>
+                                </div>
+                                <p class="applied-list0-filter-on">
+                                    전체</p><select name="applied_filter" class="applied-filter-status">
+                                    <option id="APPLIED" value="APPLIED">전체
+                                    </option>
+                                    <option id="READ" value="READ">열람
+                                    </option>
+                                    <option id="UNREAD" value="UNREAD">미열람
+                                    </option>
+                                    <option id="CANCELED" value="CANCELED">
+                                        지원취소</option>
+                                </select>
+                            </div>
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
+                    <ul class="applied-list0 applied-list">
+                        <h1>
+                            <div>지원완료 총 0건</div>
+                            <div>
+                                <div class="applied-list0-filter">
+                                    <button aria-expanded="false" aria-haspopup="true" class="btn-text"
+                                        type="button"><span>열람여부
+                                            필터링</span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="none" viewBox="0 0 16 16" aria-hidden="true" class="arrow grey">
+                                            <path fill="#222" fill-rule="evenodd"
+                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                                clip-rule="evenodd">
+                                            </path>
+                                        </svg></button>
+                                </div>
+                                <p class="applied-list0-filter-on">
+                                    전체</p><select name="applied_filter" class="applied-filter-status">
+                                    <option id="APPLIED" value="APPLIED">전체
+                                    </option>
+                                    <option id="READ" value="READ">열람
+                                    </option>
+                                    <option id="UNREAD" value="UNREAD">미열람
+                                    </option>
+                                    <option id="CANCELED" value="CANCELED">
+                                        지원취소</option>
+                                </select>
+                            </div>
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
+                    <ul class="applied-list0 passed-list hidden">
+                        <h1>
+                            <div>서류통과 총 0건</div>
+                            <div>
+                                <div class="applied-list0-filter">
+                                    <button aria-expanded="false" aria-haspopup="true" class="btn-text"
+                                        type="button"><span>열람여부
+                                            필터링</span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="none" viewBox="0 0 16 16" aria-hidden="true" class="arrow grey">
+                                            <path fill="#222" fill-rule="evenodd"
+                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                                clip-rule="evenodd">
+                                            </path>
+                                        </svg></button>
+                                </div>
+                                <p class="applied-list0-filter-on">
+                                    전체</p><select name="applied_filter" class="applied-filter-status">
+                                    <option id="APPLIED" value="APPLIED">전체
+                                    </option>
+                                    <option id="READ" value="READ">열람
+                                    </option>
+                                    <option id="UNREAD" value="UNREAD">미열람
+                                    </option>
+                                    <option id="CANCELED" value="CANCELED">
+                                        지원취소</option>
+                                </select>
+                            </div>
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
+                    <ul class="applied-list0 hired-list hidden">
+                        <h1>
+                            <div>최종합격 총 0건</div>
+                            <div>
+                                <div class="applied-list0-filter">
+                                    <button aria-expanded="false" aria-haspopup="true" class="btn-text"
+                                        type="button"><span>열람여부
+                                            필터링</span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="none" viewBox="0 0 16 16" aria-hidden="true" class="arrow grey">
+                                            <path fill="#222" fill-rule="evenodd"
+                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                                clip-rule="evenodd">
+                                            </path>
+                                        </svg></button>
+                                </div>
+                                <p class="applied-list0-filter-on">
+                                    전체</p><select name="applied_filter" class="applied-filter-status">
+                                    <option id="APPLIED" value="APPLIED">전체
+                                    </option>
+                                    <option id="READ" value="READ">열람
+                                    </option>
+                                    <option id="UNREAD" value="UNREAD">미열람
+                                    </option>
+                                    <option id="CANCELED" value="CANCELED">
+                                        지원취소</option>
+                                </select>
+                            </div>
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
+                    <ul class="applied-list0 rejected-list hidden">
+                        <h1>
+                            <div>불합격 총 0건</div>
                             <div>
                                 <div class="applied-list0-filter">
                                     <button aria-expanded="false" aria-haspopup="true" class="btn-text"
@@ -388,5 +477,6 @@
         style="position: absolute;"></next-route-announcer>
 </body>
 <script src="/static/js/member/mypage-all.js"></script>
+<script src="/static/js/member/mypage-applied.js"></script>
 
 </html>
