--- a/static/css/main/MainPage.css
+++ b/static/css/main/MainPage.css
@@ -116,6 +116,7 @@ img, fieldset, iframe {
     justify-content: space-between;
     align-items: center;
     height: 56px;
+    z-index: 13;
 }
 
 .logoWrap{
@@ -128,6 +129,10 @@ img, fieldset, iframe {
 
 .pageLogo{
     display: inline-flex;
+}
+
+.mainSearch{
+    position: relative;
 }
 
 .searchWrapper{
@@ -187,7 +192,7 @@ img, fieldset, iframe {
 }
 
 .searchWindow{
-    position: absolute;
+    position: fixed;
     top: 51px;
     left: 0px;
     width: 472px;
@@ -195,7 +200,7 @@ img, fieldset, iframe {
     border: 1px solid rgb(228, 228, 228);
     box-shadow: rgba(20, 20, 20, 0.12) 0px 8px 16px;
     border-radius: 8px;
-    z-index: 6;
+    z-index: 1000;
     padding: 24px;
     visibility: hidden;
 }
