--- a/templates/main/positionSort.html
+++ b/templates/main/positionSort.html
@@ -13,6 +13,17 @@
     </head>
     <body>
         <!-- 헤더 시작 -->
+        <!-- 검색창 시작 -->
+        <div class="searchWindow">
+            <div class="searchWindowTitle">
+                <h4>최근 검색어</h4>
+            </div>
+            <div class="searchWindowContents">
+                최근 검색어가 없습니다.
+                <br />
+            </div>
+        </div>
+        <!-- // 검색창 끝 -->
         <header class="header">
             <div class="headerWrapper">
                 <div class="fixedNavigation">
@@ -155,15 +166,6 @@
                             </div>
                             <button class="closeButton">닫기</button>
                         </div>
-                        <div class="searchWindow">
-                            <div class="searchWindowTitle">
-                                <h4>최근 검색어</h4>
-                            </div>
-                            <div class="searchWindowContents">
-                                최근 검색어가 없습니다.
-                                <br />
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <nav class="mainNavigation">
@@ -199,7 +201,7 @@
                                 aria-pressed="true"
                                 type="button"
                                 value="jobCategory"
-                                class="categoryButton"
+                                class="categoryButton categoryAllSelect"
                             >
                                 <span>전체</span>
                             </button>
