--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -355,20 +355,13 @@
                   </div>
                 </div>
               </div>
-              <div class="box_right">
+              <div class="normal_user">
                 <div class="login_page_wrap">
                   <form id="login_frm" class="login_frm">
                     <div class="login_input_wrap">
                       <ul class="tab_member_type">
                         <li role="none">
-                          <button
-                            type="button"
-                            class="btn_tab t_per active"
-                            role="tab"
-                            selected="true"
-                            tabindex="0"
-                            aria-selected="true"
-                          >
+                          <button type="button" class="btn_tab t_per active">
                             개인회원
                           </button>
                         </li>
@@ -376,10 +369,7 @@
                           <button
                             type="button"
                             class="btn_tab t_com"
-                            role="tab"
-                            selected="false"
-                            tabindex="-1"
-                            aria-selected="false"
+                            id="companyMenuButton"
                           >
                             기업회원
                           </button>
@@ -390,7 +380,7 @@
                           <div class="id-input-box">
                             <input
                               type="text"
-                              id="id"
+                              id="copy_id"
                               class="txt_tool"
                               required
                             />
@@ -417,9 +407,130 @@
                                 <input
                                   type="checkbox"
                                   name="id_save"
-                                  id="autologin"
+                                  id="normallogin"
                                 />
                                 <label class="Lbl loging" for="autologin"
+                                  >로그인 유지</label
+                                >
+                              </span>
+                            </div>
+                            <div class="InpBox">
+                              <span class="Chk">
+                                <input
+                                  type="checkbox"
+                                  name="id_save"
+                                  id="save"
+                                />
+                                <label class="Lbl" for="id_save"
+                                  >아이디 저장</label
+                                >
+                              </span>
+                            </div>
+                          </div>
+                          <button
+                            type="submit"
+                            class="btn_login BtnType SizeML"
+                          >
+                            로그인
+                          </button>
+                        </div>
+                        <div class="signup-forgotten">
+                          <a href="" class="sign_up">아이디 찾기</a>
+                          <a href="" class="forgotten">비밀번호 찾기</a>
+                          <a href="" class="link_rater" style="display: none"
+                            >협업자 로그인</a
+                          >
+                        </div>
+                        <div class="social_login_tit">
+                          <p class="tit">소셜 계정으로 간편 로그인</p>
+                        </div>
+                        <ul class="social_login">
+                          <li class="login_kakao">
+                            <span class="wrap_icon">
+                              <svg
+                                viewBox="0 0 40 40"
+                                fill="#000"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="LoginFormAndSocialBottons_kakaoIcon__1o__T"
+                                width="25"
+                              >
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M19.9667 5.00132C11.2667 5.00132 4.16666 10.6013 4.16666 17.6013C4.16666 22.0013 7.06666 25.9013 11.3667 28.2013L10.1667 34.4013L16.9667 29.9013L19.9667 30.1013C28.6667 30.1013 35.7667 24.5013 35.7667 17.5013C35.7667 10.5013 28.6667 4.90132 19.9667 5.00132Z"
+                                ></path>
+                              </svg>
+                              카카오로 시작하기
+                            </span>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="company" id="company_login">
+                <div class="login_page_wrap">
+                  <form id="normal_login" class="login_frm">
+                    <div class="login_input_wrap">
+                      <ul class="tab_member_type">
+                        <li role="none">
+                          <button
+                            type="button"
+                            class="btn_tab t_per"
+                            id="normal_M"
+                          >
+                            개인회원
+                          </button>
+                        </li>
+                        <li role="none">
+                          <button type="button" class="btn_tab t_com active">
+                            기업회원
+                          </button>
+                        </li>
+                      </ul>
+                      <div class="tab_panel">
+                        <div class="login-form">
+                          <div class="id-input-box">
+                            <input
+                              type="text"
+                              id="id"
+                              class="txt_tool"
+                              required=""
+                            />
+                            <label
+                              id="id-label"
+                              class="id-label"
+                              for="id"
+                              value=""
+                              >아이디</label
+                            >
+                          </div>
+                          <div class="pw-input-box">
+                            <input
+                              type="password"
+                              id="copy_password"
+                              name="password"
+                              class="txt_tool"
+                              valuemaxlength="32"
+                              required=""
+                            />
+                            <label id="password-label" for="password"
+                              >비밀번호</label
+                            >
+                          </div>
+                          <div class="setting">
+                            <div class="InpBox" style="display: block">
+                              <span class="Chk">
+                                <input
+                                  type="checkbox"
+                                  name="id_save"
+                                  id="autologin"
+                                />
+                                <label
+                                  class="Lbl loging"
+                                  for="autologin"
+                                  style="display: none"
                                   >로그인 유지</label
                                 >
                               </span>
