--- a/templates/member/mypage-applied.html
+++ b/templates/member/mypage-applied.html
@@ -470,9 +470,59 @@
                                                 clip-rule="evenodd">
                                             </path>
                                         </svg></button>
-                                        <div class="sc-f9de9741-1 vakYz"><div class="sc-f9de9741-2 cszBRp"><div class="close_button_wrap"><button><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path stroke="#000" stroke-width="2" d="M20 4 4 20M4 4l16 16"></path></g></svg></button></div><h1>applied_filter</h1></div><div class="layer_contents"><div><ul aria-label="포지션 정렬 기준" class="sc-a37e1fc5-0 iyjlgU"><li><button class="sc-a37e1fc5-1 ksPtfT peer" type="button">전체</button></li><li><button class="sc-a37e1fc5-1 ksPtfT peer" type="button">열람</button></li><li><button class="sc-a37e1fc5-1 ksPtfT peer" type="button">미열람</button></li><li><button class="sc-a37e1fc5-1 ksPtfT peer" type="button">지원취소</button></li></ul></div></div></div>  
-                                        <div role="presentation" class="sc-f9de9741-3 eWfidV"></div>
+                                    <div class="sc-f9de9741-1 vakYz">
+                                        <div
+                                            class="sc-f9de9741-2 cszBRp">
+                                            <div
+                                                class="close_button_wrap">
+                                                <button><svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        width="24"
+                                                        height="24"
+                                                        viewBox="0 0 24 24">
+                                                        <g fill="none"
+                                                            fill-rule="evenodd">
+                                                            <path
+                                                                d="M0 0h24v24H0z">
+                                                            </path>
+                                                            <path
+                                                                stroke="#000"
+                                                                stroke-width="2"
+                                                                d="M20 4 4 20M4 4l16 16">
+                                                            </path>
+                                                        </g>
+                                                    </svg></button>
+                                            </div>
+                                            <h1>applied_filter</h1>
+                                        </div>
+                                        <div class="layer_contents">
+                                            <div>
+                                                <ul aria-label="포지션 정렬 기준"
+                                                    class="sc-a37e1fc5-0 iyjlgU">
+                                                    <li><button
+                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            type="button">전체</button>
+                                                    </li>
+                                                    <li><button
+                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            type="button">열람</button>
+                                                    </li>
+                                                    <li><button
+                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            type="button">미열람</button>
+                                                    </li>
+                                                    <li><button
+                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            type="button">지원취소</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div role="presentation"
+                                        class="sc-f9de9741-3 eWfidV">
+                                    </div>
+                                </div>
                                 <p class="applied-list0-filter-on">
                                     전체</p><select
                                     name="applied_filter"
