--- a/static/css/admin/main.css
+++ b/static/css/admin/main.css
@@ -189,9 +189,9 @@
 }
 
 /* 메뉴 카드 스타일 */
-.menu-card.menu-wadiz {
+/* .menu-card.menu-wadiz {
     border-left-color: #00b2b2;
-}
+} */
 
 .menu-card {
     font-size: 18px;
@@ -234,6 +234,7 @@
     transition-duration: 0.15s;
     margin-left: auto;
     border: 1px solid #cdd3d8;
+    /* border: 1px solid rgb(0, 221, 109); */
     border-radius: 4px;
     background-color: transparent;
     padding: 9px 24px;
